// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ChapterFooter /> on last chapter according to snapshot 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChapterFooter />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h2>
        The End - Thank you for Reading!
      </h2>,
      "id": "chapter-footer-link",
      "style": Object {
        "margin": "30px 0",
        "textAlign": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": "The End - Thank you for Reading!",
      },
      "ref": null,
      "rendered": "The End - Thank you for Reading!",
      "type": "h2",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h2>
          The End - Thank you for Reading!
        </h2>,
        "id": "chapter-footer-link",
        "style": Object {
          "margin": "30px 0",
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "The End - Thank you for Reading!",
        },
        "ref": null,
        "rendered": "The End - Thank you for Reading!",
        "type": "h2",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`<ChapterFooter /> on last chapter according to snapshot 2`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ChapterFooter
    next_chapter={
      Object {
        "id": 5,
        "title": "Something Witty",
      }
    }
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": <h2>
        <Connect(Link)
          to={
            Object {
              "payload": Object {
                "chapter_id": 5,
              },
              "type": "CHAPTER_ROUTE",
            }
          }
        >
          Next - 
          Something Witty
        </Connect(Link)>
      </h2>,
      "id": "chapter-footer-link",
      "style": Object {
        "margin": "30px 0",
        "textAlign": "center",
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <Connect(Link)
          to={
            Object {
              "payload": Object {
                "chapter_id": 5,
              },
              "type": "CHAPTER_ROUTE",
            }
          }
        >
          Next - 
          Something Witty
        </Connect(Link)>,
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            "Next - ",
            "Something Witty",
          ],
          "to": Object {
            "payload": Object {
              "chapter_id": 5,
            },
            "type": "CHAPTER_ROUTE",
          },
        },
        "ref": null,
        "rendered": Array [
          "Next - ",
          "Something Witty",
        ],
        "type": [Function],
      },
      "type": "h2",
    },
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": <h2>
          <Connect(Link)
            to={
              Object {
                "payload": Object {
                  "chapter_id": 5,
                },
                "type": "CHAPTER_ROUTE",
              }
            }
          >
            Next - 
            Something Witty
          </Connect(Link)>
        </h2>,
        "id": "chapter-footer-link",
        "style": Object {
          "margin": "30px 0",
          "textAlign": "center",
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <Connect(Link)
            to={
              Object {
                "payload": Object {
                  "chapter_id": 5,
                },
                "type": "CHAPTER_ROUTE",
              }
            }
          >
            Next - 
            Something Witty
          </Connect(Link)>,
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              "Next - ",
              "Something Witty",
            ],
            "to": Object {
              "payload": Object {
                "chapter_id": 5,
              },
              "type": "CHAPTER_ROUTE",
            },
          },
          "ref": null,
          "rendered": Array [
            "Next - ",
            "Something Witty",
          ],
          "type": [Function],
        },
        "type": "h2",
      },
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
